--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
       <title>Document</title>
 </head>
 <body>
-      <ul>
-            <li></li>
-            <li></li>
-            <li></li>    
-            <li></li>
-            <li></li>
-         </ul>
+      <h1>Lorem ipsum dolor sit.</h1>
+         <p>Vitae, accusantium animi?</p>
+         <p>Inventore, sint omnis.</p>
+         <p>Deserunt, esse rem.</p>
+         <p>Corporis, voluptatem doloribus.</p>
        </body>
-       <html></html>
+       <html>
